# SimulatedIoT

./: CMakeLists.txt  config.json
include/: config_handler.h  data_analysis.h  data_analysis_factory.h  data_analysis_interface.h  database_factory.h  database_handler.h  database_interface.h  device_simulator.h  mongodb_data_analysis.h  mongodb_handler.h  simulation_manager.h
src/: config_handler.cpp  data_analysis.cpp  database_handler.cpp  device_simulator.cpp  main.cpp  mongodb_data_analysis.cpp  mongodb_handler.cpp  simulation_manager.cpp
